Fix wrapping on line number

--- a/client/web/src/codeintel/ReferencesPanel.module.scss
+++ b/client/web/src/codeintel/ReferencesPanel.module.scss
@@ -65,6 +65,9 @@ $filter-input-height: 1.5rem;
         text-align: left;
 
         transition: none !important;
+
+        // Avoid line number and filename getting put on different lines
+        white-space: nowrap;
     }
 
     button:hover {
